--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "uuidv4": "^6.2.13",
+    "ws": "^8.12.0"
   }
 }
