--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.2.0",
     "recharts": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
